[gd_scene load_steps=5 format=3 uid="uid://b60r8732kqw88"]

[ext_resource type="PackedScene" uid="uid://bya1curklquun" path="res://weapons/bullets/base_bullet/base_bullet.tscn" id="1_8cko2"]
[ext_resource type="Script" path="res://weapons/bullets/base_missile/missile.gd" id="2_si3mo"]
[ext_resource type="PackedScene" uid="uid://bu1s4lcuftqam" path="res://misc/particles/explosion/explosion_01.tscn" id="3_flkha"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6j16v"]
radius = 64.0

[node name="missile" instance=ExtResource("1_8cko2")]
script = ExtResource("2_si3mo")

[node name="bullet_collision" parent="." index="0"]
one_way_collision = false

[node name="explosion_01" parent="." index="3" instance=ExtResource("3_flkha")]

[node name="blast_area" type="Area2D" parent="." index="4"]

[node name="blast_area_collision" type="CollisionShape2D" parent="blast_area" index="0"]
shape = SubResource("CircleShape2D_6j16v")
